# Mini-ML

./: LICENSE  README.md
Lang0/: AST.ml  AST.mli  Eval.ml  EvalMain.ml  Lexer.mll  LexerMain.ml  ParToken.mly  Parser.mly  ParserMain.ml  Token.ml  Token.mli  Utils.ml  Version.ml  build.sh  clean.sh  link.sh
Lang0/Test/: constr.ml  even_odd.ml  expr.ml  fact.ml  pat.ml  pat1.ml
Lang1/: .EvalMain.tag  .links  AST.ml  AST.mli  Compile.ml  Compile.mli  Edit.mli  Edit.mll  Eval.ml  Eval.mli  EvalMain.ml  EvalOpt.ml  EvalOpt.mli  Lexer.mli  Lexer.mll  LexerMain.ml  Loc.ml  Loc.mli  Makefile.cfg  ParToken.mly  Parser.mly  ParserMain.ml  Pos.ml  Pos.mli  Region.ml  Region.mli  Token.ml  Token.mli  Utils.ml  Utils.mli  Version.ml  clean.sh  dune  grammar_Lang1.txt  link.sh  mini_ML_grammar.txt  stubs.c
Lang1/Tests/: bool.ml  cond.mml  cond_match.mml  constr.mml  even_odd.ml  expr.ml  fact.ml  let.mml  list.mml  match.mml  pat.mml  pat1.mml  pat2.ml  str.mml
Lang2/: .links  AST.ml  AST.mli  Compile.ml  Compile.mli  Edit.mll  Eval.ml  EvalMain.ml  EvalOpt.ml  Lexer.mll  LexerMain.ml  Loc.ml  Loc.mli  ParToken.mly  Parser.mly  ParserMain.ml  Pos.ml  Region.mli  Token.ml  Token.mli  Utils.mli  Version.ml  build.sh  grammar_Lang2.txt
Lang2/Doc/: grammar_Lang2.txt  mini_ml.bnf
Lang2/Tests/: cartesian.mml  comment.mml  cond_match.mml  match.mml  variant.mml
